k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: form-ui
  name: form-ui
spec:
  type: NodePort
  ports:
    - name: 8080-tcp
      port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    app: form-ui
